# sensiflow

./: README.md  consum_alt.py  consum_flight_range.py  consum_load.py  fleet.py  flight.py  fuel_payload.py  mach_altitude_ratio.py  mass.py  pyproject.toml  sensitivity_fixed_alt.py  sensitivity_with_weigh.py  sensitivity_with_weigh_load.py  sensitivity_wo_weight_load.py  sensitivity_wo_weigth.py  test_bada.py
bada_test/output/: A320_800km.csv  B744_6000km.csv
data/: seats.csv
results/output/: A320_1600km.csv  A320_2300km.csv  A320_350km.csv  A320_400km.csv  A320_580km.csv  A321_2300km.csv  B77W_5600km.csv
